THRIFT-3552 c_glib: Fix memory leak in processor

- t_c_glib_generator.cc: Free method-name string once matched within a
  generated dispatch_call implementation.
- thrift_dispatch_processor.c: Free method-name string in default
  dispatch_call implementation.